src/styles/main.scss
$primaryColor: #222;
$secondaryColor: tomato;

html {
  margin: 0;
  padding: 0;
  border: 0;
  background: #eee;
  color: $primaryColor;
  font-family: Consolas, Liberation Mono, Menlo, Courier, monospace;
  box-sizing: border-box
}

body {
  line-height: 1.2em;
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font-weight: 300;
  vertical-align: baseline;
}

main {
  width: 100%;
  max-width: 960px;
  padding: 0;
  margin: 0 auto;
  padding-top: 60px;
}

.container {
  margin: 4rem auto;
  max-width: 800px;
  padding-left: 1rem;
  padding-right: 1rem;
}

section.header-section {
  margin: 0 auto 3em;
}

section.sub-section {
  margin-bottom: 6em;
}

section.entry {
  margin-bottom: 3em;
}

h1 {
  font-weight: bold;
  font-size: 3em;
  line-height: 1.2em;
  margin: 0 auto 3rem;
}

h2 {
  font-weight: bold;
  font-size: 2.5em;
  line-height: 1.2em;
  margin: 0 auto 3rem;
}

h3 {
  font-weight: bold;
  font-size: 1.5em;
  line-height: 1.2em;
  margin: 0 auto 0;
}

h1::before {
  content: '# ';
  color: $secondaryColor;
}

h2::before {
  content: '## ';
  color: $secondaryColor;
}

h3::before {
  content: '### ';
  color: $secondaryColor;
}

span.redacted {
  background: $primaryColor;
  padding: 0 0.2em;
}

span.redacted:hover {
  color: #eee;
}

.tech-list {
  border-left: 1px solid $secondaryColor;
}

.tech-item {
  border-right: 1px solid $secondaryColor;
  padding-left: 1em;
  padding-right: 1em;
  display: inline-block;
}

